[package]
name = "mobilesuica-sheet-app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main", version = "0.6.16" }
bytes = "1.4.0"
reqwest = { version = "0.11.18", features = ["stream", "cookies"] }
scraper = "0.17.1"
tokio = { version = "1.30.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
